# kisakcod-ios-port

./: .gitattributes  .gitignore  CMakeLists.txt  FRONTIER_REPORT.md  PORT_JOURNAL.md  README.md
.github/workflows/: build-kisarcod-win.yaml  ios-compile-probe.yml  ios-stub.yml  mac-lab.yml
docs/: HANDOFF_TO_CODEX.md  LAYOUT_CONFORMANCE.md  MAC_DAY_PLAN.md  NEXT_SESSION.md  OAT_EVALUATION.md  REAL_ZONE_EVIDENCE.md  ROADMAP_TO_PLAYABLE.md
docs/knowledge/: CI_NOTES.md  RENDERER_INIT_NOTES.md
docs/reviews/: ff-kernel-k01-claude-response.md  frontier-plan-claude-ruling.md  k2-lane-a-notes.md  oracle1-lane-c-notes.md  orchestrator-doctrine-claude.md  pre-mac-plan-claude-response.md  pre-mac-plan-claude.md  renderer-device-lane-b-notes.md  roadmap-claude-response.md  roadmap-sol.md
docs/wip/: BootSmoke-wip.cpp  PmoveSandbox-wip.cpp  PmoveScaffold-wip.cpp  PmoveScaffoldShared-wip.cpp  lp64-hunk-partial.patch
ios/: .gitignore  README.md  project.yml
ios/Stub/: AppDelegate.swift  BootComInit.cpp  BootEventSmoke.cpp  BootFFSmoke.cpp  BootFSSmoke.cpp  BootM15Closeout.cpp  BootNetSmoke.cpp  BootScaffold.cpp  BootSmoke.cpp  BridgingHeader.h  D3D9Smoke.mm  EngineSmoke.cpp  MetalViewController.swift  PmoveSandbox.cpp  PmoveScaffold.cpp  PmoveScaffoldShared.cpp  RendererPlaceholder.cpp  RendererPlaceholder.h  RendererProofScaffold.cpp  Shaders.metal  boot_closure.txt
scripts/ios/: CMakeLists.txt
scripts/platform/ios/: build-dxvk-ios.sh  build-engine-lib.sh  dxvk-v2.7.1-ios.patch  iterate-device.sh  platform.cmake  preflight-lint.sh  run-census-local.sh
scripts/platform/ios/lab/: README.md  probe-sdk.sh
src/DynEntity/: DynEntity_client.h
src/EffectsCore/: fx_random.cpp  fx_system.h
src/aim_assist/: aim_assist.h
src/bgame/: bg_local.h  bg_public.h
src/common/: brush.h
src/database/: db_file_load.cpp  db_load.cpp  db_registry.cpp  db_stream.cpp  db_stream_load.cpp  db_stringtable_load.cpp
src/devgui/: devgui.h
src/game/: actor.h  actor_aim.cpp  enthandle.h  game_public.h  pathnode.h
src/game_mp/: g_main_mp.h  g_public_mp.h
src/gfx_d3d/: fxprimitives.h  r_bsp.h  r_dobj_skin.h  r_fog.cpp  r_font.h  r_gfx.h  r_init.cpp  r_init.h  r_material.h  r_rendercmds.cpp  r_rendercmds.h  r_staticmodelcache.cpp  rb_backend.cpp
src/groupvoice/: directsound.h
src/ios/: bsd_net_compat.h  ff_kernel.cpp  ff_kernel.h  mss_ios_stub.h  msvc_crt_compat.cpp  msvc_crt_compat.h  r_ios_window.h  snd_ios_stub.cpp  sys_ios.h  sys_ios_events.cpp  sys_ios_main.mm  sys_ios_paths.mm  win32_tags.h
src/qcommon/: cm_load_obj.cpp  cmd.cpp  common.cpp  huffman.cpp  msg_mp.cpp  msg_mp.h  qcommon.h  threads.cpp  threads.h
src/script/: scr_animtree.h  scr_compiler.h  scr_const.h  scr_debugger.h  scr_evaluate.h  scr_main.h  scr_memorytree.h  scr_parser.h  scr_stringlist.cpp  scr_variable.h  scr_vm.h
src/server_mp/: sv_main_mp.cpp
src/sound/: snd_local.h  snd_mss.cpp  snd_public.h
src/universal/: com_files.cpp  com_files.h  com_math.h  com_memory.cpp  com_memory.h  dvar.cpp  dvar_cmds.cpp  kisak_layout.h  q_parse.h  q_shared.cpp  q_shared.h  win_common.cpp
src/win32/: win_local.h  win_net.cpp  win_net.h  win_net_debug.cpp  win_steam.cpp
src/xanim/: dobj.cpp  dobj.h  xanim.h  xmodel.h
tools/ffk_deskcheck/: README.md  desk_check_k2.py
tools/import/: generate_supported_data.py  supported_data.v1.json  verify_supported_data.py
tools/layout_conformance/: CMakeLists.txt  README.md  compare_layouts.py  layout_registry.inc  main.cpp  run-windows-ci.ps1
tools/oracle1/: CMakeLists.txt  DESIGN.md  FIXTURE02_VERDICT.md  bmk4_oracle1_instr.h  check_line_discipline.py  check_trace.py  oracle1_main.cpp  oracle1_scaffold.cpp  oracle1_trace.cpp  oracle1_trace.h
tools/spikes/oat-zonelayoutmanifest/: 0001-zonelayoutmanifest-template.patch  SPIKE_REPORT.md  iw3_menudef_t.layout  iw3_rawfile.layout
tools/zone_fixtures/: .gitattributes  ENGINE_TRACE_02.md  README.md  SHA256SUMS  build_zone_fixtures.py
tools/zone_fixtures/01_rawfile_inline/: MALFORMED_MANIFEST.json  MANIFEST.json  malformed_truncated_buffer.ff  valid.ff
tools/zone_fixtures/02_stringtable_script_remap/: MALFORMED_MANIFEST.json  MANIFEST.json  fixture02_malformed_bad_script_count.ff  fixture02_valid.ff  malformed_bad_script_count.ff  valid.ff
tools/zone_fixtures/03_alias_forward/: MALFORMED_MANIFEST.json  MANIFEST.json  malformed_bad_sentinel.ff  valid.ff
tools/zone_fixtures/04_cross_block_offset/: MALFORMED_MANIFEST.json  MANIFEST.json  malformed_empty_block_offset.ff  valid.ff
tools/zone_fixtures/05_interior_offset/: MALFORMED_MANIFEST.json  MANIFEST.json  malformed_one_past_interior.ff  valid.ff
tools/zone_fixtures/06_delayed_stream_order/: MALFORMED_MANIFEST.json  MANIFEST.json  malformed_truncated_delayed_record.ff  valid.ff
tools/zone_fixtures/07_tagged_union_arm/: MALFORMED_MANIFEST.json  MANIFEST.json  malformed_wrong_arm_size.ff  valid.ff
